# photo_comp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.workspace.ts
.cargo/: config.toml
docs/: web-port.md
docs/superpowers/plans/: 2026-05-22-photos-compilation.md  2026-05-31-duplicate-photos.md  2026-05-31-gallery-workstation-ui-retouch.md  2026-05-31-import-duplicate-review.md  2026-05-31-photo-drop-import.md  2026-05-31-timeline-photo-actions-and-drop-import.md
docs/superpowers/specs/: 2026-05-22-photos-compilation-design.md  2026-05-31-import-duplicate-review-design.md  2026-05-31-timeline-photo-actions-and-drop-import-design.md
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: disk.rs  import.rs  mod.rs  render.rs
src-tauri/src/ffmpeg/: mod.rs  render_pipeline.rs  startup_check.rs
src-tauri/src/image/: exif.rs  heic.rs  mod.rs  thumbnail.rs
src-tauri/src/image_processing/: exif.rs
src/components/BpmControls/: BpmControls.tsx
src/components/ControlsPanel/: ControlsPanel.tsx
src/components/Filmstrip/: Filmstrip.tsx  (+3 more)
src/hooks/: useAudioEngine.ts  usePreviewSync.ts
src/lib/: browserImportCache.ts  browserMediaStore.ts  browserPhotoImport.ts  cumulativeTimeline.ts  desktopImport.ts  frameDraw.ts  projectPersistence.ts  runtime.ts  tapTempo.ts
src/store/: projectStore.ts  types.ts
src/test/: bpmDetector.test.ts  cumulativeTimeline.test.ts  photoImport.test.ts  projectPersistence.test.ts  projectStore.test.ts  tapTempo.test.ts
src/utils/: tauriAsset.ts
(+4 files in other folders)
