[package]
name = "photos-compilation"
version = "0.1.0"
description = "PhotosCompilation - Beat-synced photo video compiler"
authors = []
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "photos_compilation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
exif = { package = "kamadak-exif", version = "0.6" }
nanoid = "0.4"
anyhow = "1"
tempfile = "3"
walkdir = "2"
dunce = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
